cmake_minimum_required(VERSION 3.2.2)

option(USE_CLANG "build application with clang" ON)

if(USE_CLANG)
    set(CMAKE_C_COMPILER "/usr/bin/clang")
    set(CMAKE_CXX_COMPILER "/usr/bin/clang++")
endif(USE_CLANG)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory ( ./memory )
add_subdirectory ( ./literals )
add_subdirectory ( ./types )
add_subdirectory ( ./rangefor )
add_subdirectory ( ./initlist )
add_subdirectory ( ./lambda )
add_subdirectory ( ./genericlambda )
add_subdirectory ( ./functional )
add_subdirectory ( ./thread )
add_subdirectory ( ./mutex )
add_subdirectory ( ./chrono )
add_subdirectory ( ./multiplereturn )
add_subdirectory ( ./any )
add_subdirectory ( ./containers )
add_subdirectory ( ./copymovector )
project(globalProject)
